# motosan-tool

./: .migration-plan-rust-web-search-brave-to-tavily.md  .reimpl-rust-web-search-brave-to-tavily-attempt2.md  CHANGELOG.md  Cargo.toml  README.md
python/: README.md  pyproject.toml
python/motosan_agent_tool/: tool.py
python/tests/: test_tool.py
src/: error.rs  lib.rs  registry.rs  tool.rs
src/tools/: browser_act.rs  browser_auth.rs  browser_common.rs  browser_navigate.rs  browser_read.rs  browser_screenshot.rs  browser_snapshot.rs  browser_wait.rs  generate_pdf.rs  mod.rs  read_file.rs  read_pdf.rs  read_spreadsheet.rs  web_search.rs
typescript/: package.json
typescript/src/: tool.ts
typescript/tests/: tool.test.ts
