[package]
name = "motosan-agent-tool"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/motosan-dev/motosan-agent-tool"
homepage = "https://github.com/motosan-dev/motosan-agent-tool"
description = "Shared AI agent tool kit — traits, registry, and built-in tools for LLM agents"
authors = ["motosan-dev"]
keywords = ["ai", "agent", "tool", "llm", "bot"]
categories = ["development-tools"]

[features]
default = []
web_search = ["dep:reqwest"]
fetch_url = ["dep:reqwest"]
read_file = []
read_pdf = ["dep:pdf-extract"]
read_spreadsheet = ["dep:calamine"]
js_eval = ["dep:boa_engine", "tokio/time"]
python_eval = ["tokio/process", "tokio/time"]
datetime = ["dep:chrono", "dep:chrono-tz"]
currency_convert = ["dep:reqwest"]
cost_calculator = ["currency_convert"]
generate_pdf = ["dep:printpdf"]
browser = ["tokio/process", "tokio/time"]
all_tools = ["web_search", "fetch_url", "read_file", "read_pdf", "read_spreadsheet", "js_eval", "python_eval", "datetime", "currency_convert", "cost_calculator", "generate_pdf", "browser"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
pdf-extract = { version = "0.10", optional = true }
calamine = { version = "0.34", features = ["dates"], optional = true }
boa_engine = { version = "0.21", optional = true }
chrono = { version = "0.4", optional = true }
chrono-tz = { version = "0.10", optional = true }
printpdf = { version = "0.7", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
