[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motosan-agent-tool"
version = "0.2.0"
description = "Shared AI agent tool kit for LLM agents"
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
