[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motosan-agent-tool"
version = "0.2.3"
description = "Shared AI agent tool kit for LLM agents"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
authors = [{ name = "motosan-dev" }]
keywords = ["ai", "agent", "tool", "llm", "bot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Repository = "https://github.com/motosan-dev/motosan-agent-tool"
Homepage = "https://github.com/motosan-dev/motosan-agent-tool"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
